<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:textSize="40sp"
        app:layout_constraintBaseline_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula" />

    <GridLayout
        android:id="@+id/LayoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult">


        <!-- Row 1 -->
        <Button
            android:text="@string/c"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/clear"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onClear" />

        <Button
            android:text="@string/del"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/delete"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:onClick="onDelete" />

        <Button
            android:text="@string/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/divide"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onOperatorClick" />
        <!-- Row 2 -->

        <Button
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/seven"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/eight"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/nine"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/multiply"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onOperatorClick" />


        <!-- Row 3 -->
        <Button
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/four"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/five"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/six"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/minus"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onOperatorClick" />

        <!-- Row 4 -->
        <Button
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/one"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/two"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/three"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/plus"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onOperatorClick" />

        <!-- Row 5 -->
        <Button
            android:text="@string/_00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/doublezero"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="25sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/_0k"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/zero"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dot"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onNumberClick" />

        <Button
            android:text="@string/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/equal"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/BlueNavy"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="30sp"
            android:onClick="onEqual" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
